added some info

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="about-text">
                             <p>
                                 Hello ,I am Nusrat Jahan.
-                                I am pursuing my B.S.C in Computer Science and Engineering on Daffodil International
+                                I am pursuing my B.S.C in Computer Science and Engineering at Daffodil International
                                 University.
                             </p>
                             <p>From Dhaka,Bangladesh</p>
@@ -228,6 +228,11 @@
 
 
     <!-- Contact Start -->
+    <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+        <p>Feel free to contact with me </p>
+        <h2>Send Message </h2>
+    </div>
+
     <div class="contact wow fadeInUp" data-wow-delay="0.1s" id="contact">
         <div class="container-fluid">
             <div class="container">
